# library-management-system

./: .env.example  .gitignore  README.md  build_backend.py  build_tests.py  pyproject.toml  requirements.txt  visualize_tests.py
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  books.py  loans.py  stats.py  users.py
app/core/: config.py  security.py
app/db/: database.py  dependencies.py  seed.py
app/models/: book.py  loan.py  user.py
app/schemas/: book.py  loan.py  stats.py  user.py
app/services/: book_service.py  loan_service.py  user_service.py
docs/: ci_cd_strategy.md  config_management.md  iso25010_analysis.md  test_plan.md
reports/: test_report.html
static/: index.html
static/css/: style.css
static/js/: app.js  router.js
static/js/components/: modal.js  navbar.js  statsCard.js  toast.js
static/js/services/: api.js
static/js/views/: bookDetail.js  catalog.js  dashboard.js  loans.js  login.js  users.js
tests/: conftest.py
tests/integration/: test_auth_api.py  test_books_api.py  test_loans_api.py  test_users_api.py
tests/system/: test_workflows.py
tests/unit/: test_book_service.py  test_loan_service.py  test_user_service.py
